--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <form action="#">
         <h1 class="entername">Enter your name: </h1>
         <input placeholder="name" type="text" id="userName">
-        <a id="linkOne" onclick="nameInBall()" href="chooselevel.html">Submit</a>
+        <a id="linkOne" href="chooselevel.html">Submit</a>
       </form> 
     </div>
   </body>
