--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id ="usercard">
       <form action="#">
         <h1 class="entername">Enter your name: </h1>
+        <h2 class="entername">Click on the ball to win !</h2>
         <input placeholder="name" type="text" id="userName">
         <a id="linkOne" href="chooselevel.html">Submit</a>
       </form> 
