--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <button class="size size-big">HARD</button>
       </div>
       <div class="flex-container">
-        <button class="game game-start">Start game</button>
-        <button class="game game-stop">Stop game</button>
+        <button onclick="startGame()" class="game game-start">Start game</button>
+        <button onclick="stopGame()" class="game game-stop">Stop game</button>
       </div>
     </header>
     <main>
@@ -42,4 +42,5 @@
       </div>
     </footer>
   </body>
+  <script src="javascript/app.js"></script>
 </html>
