--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <main>
-      <div onclick="win()" id="ball"></div>
+      <div onclick="winGame()" id="ball"></div>
     </main>
     <footer>
       <div class="flex-container">
