--- a/index.html
+++ b/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Choose level</title>
-  </head>
-  <body>
-    <header>
-      <div class="flex-container">
-        <label for="#">Choose difficulty</label>
-        <button onclick="startGame()" class="level level-easy">EASY</button>
-        <button onclick="mediumLevel()" class="level level-medium">MEDIUM</button>
-        <button onclick="hardLevel()" class="level level-hard">HARD</button>
-        <button onclick="veryHardLevel()" class="level level-very-hard">VERY HARD</button>
-        <button onclick="godModeLevel()" class="level level-god-mode">God mode</button>
-        <button onclick="impossibleLevel()" class="level level-impossible ">Impossible</button>
-      </div>
-      <div class="flex-container">
-        <label for="#">Choose ball size</label>
-        <button onclick="smallBall()" class="size size-small">SMALL</button>
-        <button onclick="mediumBall()" class="size size-medium">MEDIUM</button>
-        <button onclick="bigBall()" class="size size-big">BIG </button>
-      </div>
-      <div class="flex-container">
-        <button onclick="startGame()" class="game game-start">Start game</button>
-        <button onclick="stopGame()" class="game game-stop">Stop game</button>
-      </div>
-    </header>
-    <main>
-      <div onclick="winGame()" id="ball"></div>
-    </main>
-    <footer>
-      <div class="flex-container">
-        <button onclick="counter()" class="giveUP">Give up</button>
-        <div id="pointsCounter"></div>
-      </div>
-    </footer>
-  </body>
-  <script src="javascript/app.js"></script>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="css/style.css"><title>Choose level</title></head><body><header><div class="flex-container"><label for="#">Choose difficulty</label><button onclick="startGame()" class="level level-easy">EASY</button><button onclick="mediumLevel()" class="level level-medium">MEDIUM</button><button onclick="hardLevel()" class="level level-hard">HARD</button><button onclick="veryHardLevel()" class="level level-very-hard">VERY HARD</button><button onclick="godModeLevel()" class="level level-god-mode">God mode</button><button onclick="impossibleLevel()" class="level level-impossible ">Impossible</button></div><div class="flex-container"><label for="#">Choose ball size</label><button onclick="smallBall()" class="size size-small">SMALL</button><button onclick="mediumBall()" class="size size-medium">MEDIUM</button><button onclick="bigBall()" class="size size-big">BIG </button></div><div class="flex-container"><button onclick="startGame()" class="game game-start">Start game</button><button onclick="stopGame()" class="game game-stop">Stop game</button></div></header><main><div onclick="winGame()" id="ball"></div></main><footer><div class="flex-container"><button onclick="counter()" class="giveUP">Give up</button><div id="pointsCounter"></div></div></footer></body><script src="javascript/app.js"></script></html> 
