--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Choose level</title>
+    <link rel="icon" href="images/favicon.jpg">
+    <title>game</title>
   </head>
   <body>
     <header>
@@ -22,7 +23,7 @@
     <main><div onclick="winGame()" id="ball"></div></main>
     <footer>
       <div class="flex-container">
-        <button onclick="counter()" class="giveUP">Give up</button>
+        <button onclick="giveUp()" class="giveUP">Give up</button>
         <div id="pointsCounter"></div>
       </div>
     </footer>
