--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>game</title>
+    <link rel="icon" href="images/favicon.jpg">
+    <title>Game</title>
   </head>
   <body>
     <header>
@@ -45,4 +46,3 @@
   </body>
   <script src="javascript/app.js"></script>
 </html>
-  
