--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="flex-container">
-        <label for="#">Choose difficulty</label>
+        <label>Choose difficulty</label>
         <button id="color1" onclick="startGame()" class="level level-easy">EASY</button>
         <button id="color2" onclick="mediumLevel()" class="level level-medium">MEDIUM</button>
         <button id="color3" onclick="hardLevel()" class="level level-hard">HARD</button>
@@ -19,13 +19,13 @@
         <button id="color6" onclick="impossibleLevel()" class="level level-impossible">Impossible</button>
       </div>
       <div class="flex-container">
-        <label for="#">Choose ball size</label>
+        <label>Choose ball size</label>
         <button id="color7" onclick="smallBall()" id="small" class="size size-small">SMALL</button>
         <button id="color8" onclick="mediumBall()" id="medium" class="size size-medium">MEDIUM</button>
         <button id="color9" onclick="bigBall()" id="big" class="size size-big">BIG</button>
       </div>
       <div class="flex-container">
-        <label for="#">Choose the color theme: </label>
+        <label>Choose the color theme: </label>
         <input type="color" id="userColor" />
         <button id="color11" class="color" onclick="changeColor()">Change color</button>
       </div>
