--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
     <header>
       <div class="flex-container">
         <label>Choose difficulty</label>
-        <button id="color1" onclick="startGame()" class="level level-easy">EASY</button>
-        <button id="color2" onclick="mediumLevel()" class="level level-medium">MEDIUM</button>
-        <button id="color3" onclick="hardLevel()" class="level level-hard">HARD</button>
-        <button id="color4" onclick="veryHardLevel()" class="level level-very-hard">VERY HARD</button>
-        <button id="color5" onclick="godModeLevel()" class="level level-god-mode">God mode</button>
-        <button id="color6" onclick="impossibleLevel()" class="level level-impossible">Impossible</button>
+        <button id="btn_easy" onclick="startGame()" class="level level-easy">EASY</button>
+        <button id="btn_medium" onclick="mediumLevel()" class="level level-medium">MEDIUM</button>
+        <button id="btn_hard" onclick="hardLevel()" class="level level-hard">HARD</button>
+        <button id="btn_veryHard" onclick="veryHardLevel()" class="level level-very-hard">VERY HARD</button>
+        <button id="btn_godMode" onclick="godModeLevel()" class="level level-god-mode">God mode</button>
+        <button id="btn_impossible" onclick="impossibleLevel()" class="level level-impossible">Impossible</button>
       </div>
       <div class="flex-container">
         <label>Choose ball size</label>
-        <button id="color7" onclick="smallBall()" id="small" class="size size-small">SMALL</button>
-        <button id="color8" onclick="mediumBall()" id="medium" class="size size-medium">MEDIUM</button>
-        <button id="color9" onclick="bigBall()" id="big" class="size size-big">BIG</button>
+        <button id="btn_small" onclick="smallBall()" id="small" class="size size-small">SMALL</button>
+        <button id="btn_size" onclick="mediumBall()" id="medium" class="size size-medium">MEDIUM</button>
+        <button id="btn_big" onclick="bigBall()" id="big" class="size size-big">BIG</button>
       </div>
       <div class="flex-container">
         <label>Choose the color theme: </label>
         <input type="color" id="userColor" />
-        <button id="color11" class="color" onclick="changeColor()">Change color</button>
+        <button id="btn-color" class="color" onclick="changeColor()">Change color</button>
       </div>
       <div class="flex-container">
-        <button id="color12" onclick="startGame()" class="game game-start">Start game</button>
-        <button id="color13" onclick="stopGame()" class="game game-stop">Stop game</button>
+        <button id="btn_start" onclick="startGame()" class="game game-start">Start game</button>
+        <button id="btn_stop" onclick="stopGame()" class="game game-stop">Stop game</button>
       </div>
     </header>
     <main>
@@ -39,7 +39,7 @@
     </main>
     <footer>
       <div class="flex-container">
-        <button id="color14" onclick="giveUp()" class="giveUP">Give up</button>
+        <button id="btn_lose" onclick="giveUp()" class="giveUP">Give up</button>
         <div id="pointsCounter"></div>
       </div>
     </footer>
