--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="flex-container">
         <button id="btn_lose" onclick="giveUp()" class="giveUP">Give up</button>
         <div id="pointsCounter"></div>
+        <p id="demo"></p>
       </div>
     </footer>
   </body>
