failed at adding cuntdown

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button id="btn_big" onclick="bigBall()" id="big" class="size size-big">BIG</button>
       </div>
       <div class="flex-container">
-        <label>Choose the color theme: </label>
+        <label>Choose theme: </label>
         <input onchange="changeColor()" type="color" id="userColor" />
       </div>
       <div class="flex-container">
